; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_testcurve25519.c_test_base_mul.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_testcurve25519.c_test_base_mul.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [65 x i8] c"77076d0a7318a57d3c16c17251b26645df4c2f87ebc0992ab177fba51db92c2a\00", align 1
@.str.1 = private unnamed_addr constant [65 x i8] c"8520f0098930a754748b7ddcb43ef75a0dbf3a0d26381af4eba4a98eaa9b4e6a\00", align 1
@.str.2 = private unnamed_addr constant [65 x i8] c"5dab087e624a8a4b79e17f8b83800ee66f3bb1292618b6fd1c2f8b27ff88e0eb\00", align 1
@.str.3 = private unnamed_addr constant [65 x i8] c"de9edb7d7b7dc1b4d35b61c2ece435373f8343c85b78674dadfc7e146f882b4f\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_base_mul to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_base_mul() #0 {
  %1 = alloca [32 x i32], align 16
  %2 = alloca [32 x i32], align 16
  %3 = alloca [32 x i32], align 16
  %4 = getelementptr inbounds [32 x i32], [32 x i32]* %1, i64 0, i64 0
  %5 = call i32 @unhex(i32* %4, i32 32, i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str, i64 0, i64 0))
  %6 = getelementptr inbounds [32 x i32], [32 x i32]* %3, i64 0, i64 0
  %7 = call i32 @unhex(i32* %6, i32 32, i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.1, i64 0, i64 0))
  %8 = getelementptr inbounds [32 x i32], [32 x i32]* %2, i64 0, i64 0
  %9 = getelementptr inbounds [32 x i32], [32 x i32]* %1, i64 0, i64 0
  %10 = call i32 @cf_curve25519_mul_base(i32* %8, i32* %9)
  %11 = getelementptr inbounds [32 x i32], [32 x i32]* %3, i64 0, i64 0
  %12 = getelementptr inbounds [32 x i32], [32 x i32]* %2, i64 0, i64 0
  %13 = call i64 @memcmp(i32* %11, i32* %12, i32 32)
  %14 = icmp eq i64 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @TEST_CHECK(i32 %15)
  %17 = getelementptr inbounds [32 x i32], [32 x i32]* %1, i64 0, i64 0
  %18 = call i32 @unhex(i32* %17, i32 32, i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.2, i64 0, i64 0))
  %19 = getelementptr inbounds [32 x i32], [32 x i32]* %3, i64 0, i64 0
  %20 = call i32 @unhex(i32* %19, i32 32, i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.3, i64 0, i64 0))
  %21 = getelementptr inbounds [32 x i32], [32 x i32]* %2, i64 0, i64 0
  %22 = getelementptr inbounds [32 x i32], [32 x i32]* %1, i64 0, i64 0
  %23 = call i32 @cf_curve25519_mul_base(i32* %21, i32* %22)
  %24 = getelementptr inbounds [32 x i32], [32 x i32]* %3, i64 0, i64 0
  %25 = getelementptr inbounds [32 x i32], [32 x i32]* %2, i64 0, i64 0
  %26 = call i64 @memcmp(i32* %24, i32* %25, i32 32)
  %27 = icmp eq i64 %26, 0
  %28 = zext i1 %27 to i32
  %29 = call i32 @TEST_CHECK(i32 %28)
  ret void
}

declare dso_local i32 @unhex(i32*, i32, i8*) #1

declare dso_local i32 @cf_curve25519_mul_base(i32*, i32*) #1

declare dso_local i32 @TEST_CHECK(i32) #1

declare dso_local i64 @memcmp(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
